# TCGManager

./: .gitignore  README  requirements.txt  setup.cfg  setup.py
src/tcgmanager/: cli.py
src/tcgmanager/helpers/: __init__.py  esconnection.py  tcgplayer.py
src/tcgmanager/services/: __init__.py  docupdates.py
