[metadata]
name = tcgmanager
author = Benjamin Smith
author-email = bsmithjunior@gmail.com
description = Python wrapper for managing cards with TCGPlayer API
description-file = README
home-page = https://github.com/BenjaminLSmith/TCGManager
license = Apache-2
classifier =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.7
  Environment :: Console
  Topic :: Software Development

[global]
zip_safe = False
include_package_data = True
setup-hooks =
    pbr.hooks.setup_hook

[options]
packages = find:

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose

[entry_points]
console_scripts =
  tcgmanager = tcgmanager.cli:cli

[build_sphinx]
source-dir = docs/source
builder = html
build-dir = docs/build

[extras]
DEV =
  black
  flake8
  pylint
  pytest
  sphinx>=1.7.6
  sphinxcontrib.confluencebuilder
  sphinx-click
  tox
TEST =
  pytest
  tox
BUILD =
  setuptools>=40.0.0
  sphinx>=1.7.6
  sphinxcontrib.confluencebuilder
  twine>=1.11.0
  wheel>=0.31.1
  sphinx-click

[pbr]
skip_changelog = True
skip_authors = True
warnerrors = True

[wheel]
universal = 1
